[gd_scene load_steps=2 format=3 uid="uid://buoypg2jh7yeg"]

[ext_resource type="Script" path="res://scenes/highscores/highscores.gd" id="1_tboe7"]

[node name="Highscores" type="CanvasGroup"]
script = ExtResource("1_tboe7")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 200.0
offset_bottom = 174.0
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color(0, 0, 0, 0.498039)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 200.0
offset_bottom = 126.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "HIGHSCORES"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Score1" type="Label" parent="VBoxContainer/CenterContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.980392, 0.980392, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 28
text = "0000"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Score2" type="Label" parent="VBoxContainer/CenterContainer2"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.752941, 0.752941, 0.752941, 1)
theme_override_colors/font_outline_color = Color(1, 0.980392, 0.980392, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 28
text = "0000"

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Score3" type="Label" parent="VBoxContainer/CenterContainer3"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.803922, 0.498039, 0.196078, 1)
theme_override_colors/font_outline_color = Color(1, 0.980392, 0.980392, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 28
text = "0000"
